thememomatrix.com/vsl2/css/leanzeneg-pv.webflow.css
/* ... */
.button {
  grid-column-gap: 15px;
  grid-row-gap: 15px;
  color: #032737;
  text-align: center;
  text-shadow: -1px 1px 1px #fff;
  background-image: linear-gradient(#fbff56 48%, #fcd838 52%);
  border: 2px solid #ecbf33;
  border-radius: 10px;
  justify-content: center;
  align-items: center;
  padding: 10px;
  font-size: 16px;
  text-decoration: none;
  display: flex;
  box-shadow: 0 0 0 2px #d4af3b;
}

.potes-part1 {
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  flex-flow: column;
  display: flex;
}

.potes-content-div {
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  flex-flow: column;
  padding: 20px;
  display: flex;
}

.potes-button-holder {
  grid-column-gap: 10px;
  grid-row-gap: 10px;
  flex-flow: column;
  display: flex;
}

.potes-div {
  grid-column-gap: 30px;
  grid-row-gap: 30px;
  flex-flow: column;
  justify-content: flex-start;
  align-items: center;
  padding-top: 40px;
  padding-bottom: 40px;
  display: flex;
}

.potes-part2 {
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  flex-flow: column;
  display: flex;
}

.button-text {
  font-family: Oswald, sans-serif;
}

.potes-holder-div {
  color: #000;
  background-color: #fff;
  border: 3px solid #b7b7b7;
  border-radius: 15px;
  flex-flow: column;
  width: 100%;
  text-decoration: none;
  display: flex;
}

.potes-holder-div.potes-6 {
  background-color: #FFF8C8;
  border-color: #032737;
}

.potes-tittle-div {
  background-color: #626f72;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  padding: 8px;
}

.potes-tittle-div.potes-6 {
  background-color: #032737;
}

.check-icon {
  border-radius: 100px;
  width: 100%;
  max-width: 18px;
  height: 18px;
}

.potes-price-div, .potes-bonus-div {
  grid-column-gap: 5px;
  grid-row-gap: 5px;
  flex-flow: column;
  display: flex;
}

.hand {
  align-self: flex-end;
  max-width: 50px;
  margin-top: -30px;
  margin-bottom: -25px;
  position: relative;
}

.potes-tittle-content-div {
  grid-column-gap: 5px;
  grid-row-gap: 5px;
  flex-flow: column;
  display: flex;
}

.pote {
  object-fit: contain;
  height: 100%;
  max-height: 190px;
}

.potes {
  background-color: #0000;
}

.potes-bonus-list {
  grid-column-gap: 10px;
  grid-row-gap: 10px;
  justify-content: center;
  align-items: center;
  display: flex;
}

.potes-grid {
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr 1fr;
  grid-auto-columns: 1fr;
  place-items: start center;
  display: grid;
}

.red {
  color: #F26B3A;
}

.bottles-remaining {
  flex-flow: row;
  justify-content: center;
  align-items: center;
  display: flex;
}

.shipping-div {
  border: 2px solid #000;
  border-radius: 15px;
  width: 100%;
  max-width: 850px;
  display: flex;
}

.potes-tittle {
  color: #fff;
  text-align: center;
  font-weight: 500;
}

.potes-price {
  color: #032737;
  text-align: center;
  font-size: 80px;
  line-height: 1em;
}

.potes-price-sub {
  text-align: center;
}

.potes-quantity-tittle, .potes-days-tittle {
  text-align: center;
  line-height: 1em;
}

.shipping-part1 {
  background-color: #032737;
  border-top-left-radius: 12px;
  border-bottom-left-radius: 12px;
  flex-flow: column;
  justify-content: center;
  align-items: center;
  width: 150px;
  height: auto;
  min-height: 100px;
  padding: 20px 10px;
  display: flex;
}

.shipping-part1-copy {
  grid-column-gap: 5px;
  grid-row-gap: 5px;
  background-color: #0000;
  flex-flow: column;
  justify-content: center;
  align-items: flex-start;
  width: 100%;
  padding: 20px;
  display: flex;
}

.claim {
  background-image: linear-gradient(90deg, #032737, #032737);
}

.claim.variant {
  background-image: linear-gradient(90deg, #032737, #032737);
}

.underline {
  text-decoration: underline;
}

.color-1 {
  color: #FFD93D;
}

.guarantee {
  background-image: linear-gradient(90deg, #032737, #032737);
}

.guarantee-div {
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  flex-flow: row;
  padding-top: 60px;
  padding-bottom: 60px;
  display: flex;
}

.guarantee-part1 {
  justify-content: flex-start;
  align-items: center;
  width: 100%;
  max-width: 250px;
  display: flex;
}

.guarantee-part2 {
  grid-column-gap: 10px;
  grid-row-gap: 10px;
  flex-flow: column;
  width: 100%;
  display: flex;
}

.guarantee-tittle, .guarantee-text {
  color: #fff;
}

.guarantee-images-holder {
  grid-column-gap: 15px;
  grid-row-gap: 15px;
  justify-content: center;
  align-items: center;
  width: 100%;
  max-width: none;
  max-height: none;
  display: flex;
}

.guarantee-image {
  background-color: #fff;
  border-radius: 100%;
  width: 100%;
  max-width: 100px;
  height: 100%;
  max-height: 100px;
  padding: 3px;
  box-shadow: 0 0 5px #0003;
}

.footer-1 {
  background-color: #a70c0c;
}

.footer-2 {
  background-color: #000;
}

.footer-1-div {
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  justify-content: center;
  align-items: center;
  padding-top: 20px;
  padding-bottom: 20px;
  display: flex;
}

.footer-2-div {
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  flex-flow: column;
  justify-content: center;
  align-items: center;
  padding-top: 20px;
  padding-bottom: 20px;
  display: flex;
}

.footer-1-links {
  color: #fff;
  font-weight: 600;
  text-decoration: none;
}

.branco, .footer-2-text {
  color: #fff;
}

.faq-holder {
  grid-column-gap: 0px;
  grid-row-gap: 0px;
  flex-flow: column;
  display: flex;
}

.faq-div {
  grid-column-gap: 10px;
  grid-row-gap: 10px;
  flex-flow: column;
  padding-top: 60px;
  padding-bottom: 60px;
  display: flex;
}

.faq-backgroung {
  background-color: #fff;
  border-radius: 5px;
  justify-content: space-between;
  align-items: center;
  padding: 13px 20px;
  display: flex;
}

.arrow-down-icon {
  width: 30px;
}

.faq {
  background-color: #0000;
  background-image: linear-gradient(90deg, #032737, #032737);
}

.faq-tittle {
  color: #fff;
  text-align: center;
  margin-bottom: 40px;
}
/* ... */

